--- a/сare-products.html
+++ b/сare-products.html
@@ -56,8 +56,9 @@
                                         <img src="pages\careproduct\img\catalogcare\chi1\chi1.webp" alt="CH-i1" class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Карандаш для очистки подошвы утюга CH-i1</h2>
+                                        <h2 class="info-item__title">Карандаш для очистки подошвы утюга</h2>
                                         <p class="info-item__characteristic">
+                                            strong>Артикул:</strong> CH-i1<br>
                                             Карандаш для горячей очистки подошвы утюга и бытовых приборов, работающих при высоких температурах. Применяется для удаления престарелого налёта, нагара и тёмных пятен на подошве утюга, с любого покрытия, а именно керамики, тефлона, нержавеющей стали, алюминия. Упаковка пригодна для многократного использования.
                                         </p>
                                     </div>
@@ -70,8 +71,9 @@
                                         <img src="pages\careproduct\img\catalogcare\chi2\chi2.webp" alt="CH-i2 " class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Набор - Чистый утюг CH-i2 </h2>
+                                        <h2 class="info-item__title">Набор - Чистый утюг</h2>
                                         <p class="info-item__characteristic">
+                                            <strong>Артикул:</strong> CH-i2<br>
                                             В набор входит:<br>
                                             - Карандаш для горячей очистки подошвы утюга<br>
                                             - Средство для удаления накипи<br>
@@ -90,8 +92,9 @@
                                         <img src="pages\careproduct\img\catalogcare\chw1\chw1.webp" alt="CH-W1" class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Средство для первого запуска СМ и ПММ CH-W1</h2>
+                                        <h2 class="info-item__title">Средство для первого запуска СМ и ПММ</h2>
                                         <p class="info-item__characteristic">
+                                            <strong>Артикул:</strong> CH-W1<br>
                                             Средство для первого пуска. Применяется для стиральных и посудомоечных машин. Тщательно и без остатка растворяет все заводские масла и загрязнения, присутствующие на внутренних деталях которые соприкасаются с вашим бельём и посудой.
                                         </p>
                                     </div>
@@ -104,8 +107,9 @@
                                         <img src="pages\careproduct\img\catalogcare\chw2\chw2.jpg" alt="CH-W2 " class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Антибактериальное средство для СМ и ПММ CH-W2</h2>
+                                        <h2 class="info-item__title">Антибактериальное средство для СМ и ПММ</h2>
                                         <p class="info-item__characteristic">
+                                            strong>Артикул:</strong> CH-W2<br>
                                             Средство для удаления биологических загрязнений и неприятных запахов возникающих в процессе использования стиральной или посудомоечной машины. Не использовать как средство первого пуска!
                                         </p>
                                     </div>
@@ -118,8 +122,9 @@
                                         <img src="pages\careproduct\img\catalogcare\chw3\chw3.jpg" alt="CH-W3 " class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Универсальное средство для удаления накипи CH-W3</h2>
+                                        <h2 class="info-item__title">Универсальное средство для удаления накипи</h2>
                                         <p class="info-item__characteristic">
+                                            strong>Артикул:</strong> CH-W3<br>
                                             Профессиональное средство для быстрого и деликатного удаления накипи, в основе которого лежат натуральные компоненты.
                                         </p>
                                     </div>
