--- a/сare-products.html
+++ b/сare-products.html
@@ -58,7 +58,8 @@
                                     <div class="item-card__info info-item">
                                         <h2 class="info-item__title">Карандаш для очистки подошвы утюга</h2>
                                         <p class="info-item__characteristic">
-                                            strong>Артикул:</strong> CH-i1<br>
+                                            <strong>Артикул:</strong> CH-i1<br>
+                                            <br>
                                             Карандаш для горячей очистки подошвы утюга и бытовых приборов, работающих при высоких температурах. Применяется для удаления престарелого налёта, нагара и тёмных пятен на подошве утюга, с любого покрытия, а именно керамики, тефлона, нержавеющей стали, алюминия. Упаковка пригодна для многократного использования.
                                         </p>
                                     </div>
@@ -74,6 +75,7 @@
                                         <h2 class="info-item__title">Набор - Чистый утюг</h2>
                                         <p class="info-item__characteristic">
                                             <strong>Артикул:</strong> CH-i2<br>
+                                            <br>
                                             В набор входит:<br>
                                             - Карандаш для горячей очистки подошвы утюга<br>
                                             - Средство для удаления накипи<br>
@@ -95,6 +97,7 @@
                                         <h2 class="info-item__title">Средство для первого запуска СМ и ПММ</h2>
                                         <p class="info-item__characteristic">
                                             <strong>Артикул:</strong> CH-W1<br>
+                                            <br>
                                             Средство для первого пуска. Применяется для стиральных и посудомоечных машин. Тщательно и без остатка растворяет все заводские масла и загрязнения, присутствующие на внутренних деталях которые соприкасаются с вашим бельём и посудой.
                                         </p>
                                     </div>
@@ -109,7 +112,8 @@
                                     <div class="item-card__info info-item">
                                         <h2 class="info-item__title">Антибактериальное средство для СМ и ПММ</h2>
                                         <p class="info-item__characteristic">
-                                            strong>Артикул:</strong> CH-W2<br>
+                                            <strong>Артикул:</strong> CH-W2<br>
+                                            <br>
                                             Средство для удаления биологических загрязнений и неприятных запахов возникающих в процессе использования стиральной или посудомоечной машины. Не использовать как средство первого пуска!
                                         </p>
                                     </div>
@@ -124,7 +128,8 @@
                                     <div class="item-card__info info-item">
                                         <h2 class="info-item__title">Универсальное средство для удаления накипи</h2>
                                         <p class="info-item__characteristic">
-                                            strong>Артикул:</strong> CH-W3<br>
+                                            <strong>Артикул:</strong> CH-W3<br>
+                                            <br>
                                             Профессиональное средство для быстрого и деликатного удаления накипи, в основе которого лежат натуральные компоненты.
                                         </p>
                                     </div>
