--- a/сare-products.html
+++ b/сare-products.html
@@ -47,7 +47,7 @@
             <div class="сare-products">
                 <div class="container">
                     <div class="сare-products__body">
-                        <h1 class="сare-products__title">Средство по уходу за утюгами</h1>
+                        <h1 class="сare-products__title">Средства по уходу за утюгами</h1>
                         <div class="сare-products__catalog">
                             <div class="сare-products__card">
                                 <div class="item-card">
@@ -85,7 +85,7 @@
                                 </div>
                             </div>
                         </div>
-                        <h1 class="сare-products__title">Средство по уходу за бытовой техникой </h1>
+                        <h1 class="сare-products__title">Средства по уходу за бытовой техникой </h1>
                         <div class="сare-products__catalog">
                             <div class="сare-products__card">
                                 <div class="item-card">
