--- a/accessories.html
+++ b/accessories.html
@@ -100,6 +100,8 @@
                                     <div class="item-card__info info-item">
                                         <h2 class="info-item__title">Набор для подключения стиральной машины</h2>
                                         <p class="info-item__characteristic">
+                                            <strong>Артикул:</strong> LS-002<br>
+                                            <br>
                                             <strong>В состав входит</strong>: <br>
                                             - Средство первого запуска для стиральной машины 150гр.<br>
                                             - Шланг сливной раздвижной от 1,5 до 5м<br>
@@ -117,6 +119,8 @@
                                     <div class="item-card__info info-item">
                                         <h2 class="info-item__title">Набор для подключения кухонной вытяжки</h2>
                                         <p class="info-item__characteristic">
+                                            <strong>Артикул:</strong> LS-003<br>
+                                            <br>
                                             <strong>В состав входит:</strong> <br>
                                                 - Пластиковая торцевая площадка 205*240мм. с круглым выходом и решёткой. Размер соединительного фланца Ø 125<br>
                                                 - Гофротруба 3 метра.<br>
