--- a/сare-products.html
+++ b/сare-products.html
@@ -94,7 +94,7 @@
                                         <img src="pages\careproduct\img\catalogcare\chw1\chw1.webp" alt="CH-W1" class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Средство для первого запуска СМ и ПММ</h2>
+                                        <h2 class="info-item__title">Средства для первого запуска стиральных и посудомоечных машин</h2>
                                         <p class="info-item__characteristic">
                                             <strong>Артикул:</strong> CH-W1<br>
                                             <br>
@@ -110,7 +110,7 @@
                                         <img src="pages\careproduct\img\catalogcare\chw2\chw2.jpg" alt="CH-W2 " class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Антибактериальное средство для СМ и ПММ</h2>
+                                        <h2 class="info-item__title">Антибактериальное средство для стиральных и посудомоечных машин</h2>
                                         <p class="info-item__characteristic">
                                             <strong>Артикул:</strong> CH-W2<br>
                                             <br>
@@ -122,7 +122,7 @@
                             <div class="сare-products__card">
                                 <div class="item-card">
                                     <div class="item-card__img">
-                                        <a href="#popup10102" class="increase"><img class="increase__img" src="img\icons\search.svg" alt="search"></a>
+                                        <a href="#popup-chw3" class="increase"><img class="increase__img" src="img\icons\search.svg" alt="search"></a>
                                         <img src="pages\careproduct\img\catalogcare\chw3\chw3.jpg" alt="CH-W3 " class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
