--- a/сare-products.html
+++ b/сare-products.html
@@ -94,7 +94,7 @@
                                         <img src="pages\careproduct\img\catalogcare\chw1\chw1.webp" alt="CH-W1" class="img-card">
                                     </div>
                                     <div class="item-card__info info-item">
-                                        <h2 class="info-item__title">Средства для первого запуска стиральных и посудомоечных машин</h2>
+                                        <h2 class="info-item__title">Средство для первого запуска стиральных и посудомоечных машин</h2>
                                         <p class="info-item__characteristic">
                                             <strong>Артикул:</strong> CH-W1<br>
                                             <br>
